# ceedling_dev_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.yml
.devcontainer/: Dockerfile  devcontainer.json  vscode-ceedling-test-adapter-multi-2.0.0.vsix
